<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title1"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/interface1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/shizuku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shizuku" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/root"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/root" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/interface2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/shutdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shutdown" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="4dp" />

            <Button
                android:id="@+id/reboot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="4dp" />

            <Button
                android:id="@+id/recovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovery" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="4dp" />

            <Button
                android:id="@+id/bootloader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bootloader" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="4dp" />

            <Button
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download"
                android:visibility="gone" />

            <Space
                android:id="@+id/space1"
                android:layout_width="wrap_content"
                android:layout_height="4dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/edl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edl" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/back"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>